cmake_minimum_required (VERSION 2.6)
project (CppAuParser)

if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
    set(CMAKE_CXX_FLAGS "-Wall -std=c++0x")
endif ()

include_directories(include/cppauparser/)
aux_source_directory(src/ lib_src)
add_library(cppauparser ${lib_src})

include_directories(include/)
add_executable(tutorial1 sample/tutorial1.cpp)
target_link_libraries(tutorial1 cppauparser)
add_executable(tutorial2 sample/tutorial2.cpp)
target_link_libraries(tutorial2 cppauparser)
add_executable(tutorial3 sample/tutorial3.cpp)
target_link_libraries(tutorial3 cppauparser)
add_executable(tutorial4 sample/tutorial4.cpp)
target_link_libraries(tutorial4 cppauparser)
add_executable(tutorial5 sample/tutorial5.cpp)
target_link_libraries(tutorial5 cppauparser)
